# itu_comp_eng_lectures

./: .gitmodules  README.md
ATA 101 - Atatürk İlk & İnkılap Trh I/: ata101v.odt  final.odt
ATA 101 - History of Turkish Revolution I/: ata101f.odt  vize.docx
ATA 102 - Atatürk İlk & İnkılap Trh II/: !!!Final Konuları!!!.xlsx  sorular.docx
ATA 102 - History of Turkish Revolution II/: Ders Föyü-Arka Yüz-ATA 102-Pelin Helvacı.xlsx  Son-2014-2015 DERS_Tanıtım Formu__ ATA 2.xlsx
BIL 105E - Intr to Sci&Eng Comp (C)/: .gitignore
BLG 112E - Discrete Mathematics/: Ek_Calisma_Soru_Cevap.doc
BLG 231E - Digital Circuits/: .directory
BLG 242E - Logic Circuits Laboratory/: cover_page.doc  rapor_yazim_kilavuzu (1).doc
BLG 351E - Microcomputer Lab/: Lect_5-6 [04-06-2012].ppt  adr.docx  cover_page.doc
BLG 374E - Technical Communication/: BasicPlan374.ods
BLG 412E - Computer Ethics/: blg412e term paper eng.docx
BLG 413E - System Programming/fuse-tutorial-2014-06-12/: Makefile.am  Makefile.in  configure  configure.ac  index.html
BLG 413E - System Programming/fuse-tutorial-2014-06-12/example/: Makefile
BLG 413E - System Programming/fuse-tutorial-2014-06-12/html/: Makefile.am  Makefile.in  callbacks.html  files.html  index.html  init.html  private.html  running.html  security.html  thanks.html  unclear.html
BLG 413E - System Programming/fuse-tutorial-2014-06-12/src/: Makefile.am  Makefile.in  bbfs.c  config.h.in  log.c  log.h
BLG 442E - Tech.&Innov. Mng.for Inf.Tech/: Grades.xlsx
BLG 475E - Software Quality and Testing/: BLG475E-MidtermAnswers-Fall2014.docx
BLG 492E - Graduation Project/: presentation.pptx  rapor.docx
BLG 500 - Internship/: Staj_Raporu_Sablonu_yeni.docx  staj_itiraz.docx
BLG 546E - Object Oriented Concurrent Programming/: .directory
BLG 556E - Digital Solutions for Smart Cities/: Introduction-2018.pptx
BLG 596E - Seminar/: 2018_11_23_LoRaWAN.odp  2018_11_23_LoRaWAN.pptx  seminar_attendance_form.docx
BLG YLT - Tez Çalışması/: Tugrul_Yatagan_yuksek_lisans_tez_sunus_formu.docx
BLG YLT - Thesis/: Mavi Tez Sunuş Formu.docx  Tugrul_Yatagan_MSc_Thesis_Defense_Smart_Spreading_Factor_Assignment_for_LoRaWANs.pptx  Tugrul_Yatagan_ayp_ara_rapor_formu.docx
EHB 311E - Intr.to Electronics Laboratory/: kapak.doc
ELE 222E - Introduction to Electronics/: .directory  .~lock.ELE222E-2011-MT1.doc#
(+1592 files in other folders)
